#243 [fix]: scss: change align of icons and text on beach-page

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -2206,7 +2206,7 @@ input {
 
     &__item {
       display: flex;
-      align-items: flex-start;
+      align-items: center;
       flex-direction: column;
       padding-right: 20px;
       width: 20%;
@@ -2236,6 +2236,7 @@ input {
         font-size: 14px;
         line-height: 120%;
         color: #242934;
+        text-align: center;
       }
 
       &s {
